refactor: clamp clamp clamp ( didn't know Math.min(value, max) could result in a calmp